# PySpark-Iceberg-examle

./: .gitignore  README.md  initScript.sh  pyproject.toml
data/: address.json  clients.json
src/base/: data_generator.py  data_loader.py  print.py  spark.py
src/ddl_table_structure/: pyspark_iceberg_1_create_table.py  pyspark_iceberg_2_drop_table.py  pyspark_iceberg_3_alter_table.py  pyspark_iceberg_4_rename_table.py  pyspark_iceberg_5_alter_partition.py
src/dml_data_operation/: pyspark_iceberg_1_insert_into.py  pyspark_iceberg_2_insert_overwrite.py  pyspark_iceberg_3_update.py  pyspark_iceberg_4_delete.py  pyspark_iceberg_5_merge_into.py
src/maintenance/: pyspark_iceberg_1_rewrite_data_files.py  pyspark_iceberg_2_rewrite_position_delete_files.py  pyspark_iceberg_3_rewrite_manifests.py  pyspark_iceberg_4_expire_snapshots.py  pyspark_iceberg_5_remove_orphan_files.py  pyspark_iceberg_6_add_files.py
src/metadata/: pyspark_iceberg_1_snapshots.py  pyspark_iceberg_2_history.py  pyspark_iceberg_3_files.py  pyspark_iceberg_4_manifests.py  pyspark_iceberg_5_partitions.py  pyspark_iceberg_6_register_table.py  pyspark_iceberg_7_changes.py
src/query/: pyspark_iceberg_1_select.py  pyspark_iceberg_2_where.py  pyspark_iceberg_3_group_by.py  pyspark_iceberg_4_order_by.py  pyspark_iceberg_6_join.py
src/snapshots_and_time_travel/: pyspark_iceberg_1_select_with_timestamp.py  pyspark_iceberg_2_select_with_version.py  pyspark_iceberg_3_rollback_to_snapshot.py  pyspark_iceberg_4_create_tag.py  pyspark_iceberg_5_create_branch.py  pyspark_iceberg_6_set_current_snapshot.py
(+2 files in other folders)
